test/conformance/chainsaw/image-validating-policies/context/imagedata/imagereference/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/kyverno/kyverno
          imagePullPolicy: IfNotPresent
