test/conformance/chainsaw/image-validating-policies/context/imagedata/imagereference/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-imagereference-sample
spec:
  webhookConfiguration:
    timeoutSeconds: 20
  matchConstraints:
    resourceRules:
      - apiGroups: [apps]
        apiVersions: [v1]
        operations: [CREATE, UPDATE]
        resources: [deployments]
  variables:
    - name: images
      expression: >-
        object.spec.template.spec.containers.map(e, parseImageReference(e.image))
  validations:
    - expression: >-
        variables.images.map(i, i.registry() == "ghcr.io" && !i.containsDigest()).all(e, e)
      message: >-
        Deployment must be have images from ghcr and images should be tagged
  matchImageReferences:
    - glob: ghcr.io/*
  validationConfigurations:
    mutateDigest: false
  attestors:
    - name: notary
      notary:
        certs:
          value: |-
            -----BEGIN CERTIFICATE-----
            MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
            uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
            -----END CERTIFICATE-----
  attestations:
    - name: sbom
      referrer:
        type: sbom/cyclone-dx
